@@ -41,6 +41,8 @@ AAAIntroduction
   - fixed GH# 254: UTF8::icompare unexpected behavior
   - Poco::UUID::tryParse() also accepts UUIDs without hyphens. Also updated documentation
     (links to specifications).
+  - Added support for ARM64 architecture and iPhone 5s 64-bit builds
+    (POCO_TARGET_OSARCH=arm64).
 
 
 !!!Release 1.4.6p1
